--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="stylesheet" href="/css/main.css">
+        <meta name="theme-color" content="#008080">
     </head>
     <body>
 
