--- a/html/games.html
+++ b/html/games.html
@@ -7,7 +7,7 @@
     <head>
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <title>APIs</title>
+        <title>Horoscope API</title>
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="stylesheet" href="/css/main.css">
@@ -19,11 +19,14 @@
 
         </nav>
         
-        <h1 class="phead">APIs</h1>
+        <h1 class="phead">Horoscopes</h1>
+        <p class="h3">Up-to-date as of January 2020</p>
 
-        <a href="html/countries.html">Countries</a>
-        <a href="html/games.html">Games</a>
+        <div id="container">
+
+        </div>
 
         
+        <script src="/js/games.js" type="module"></script>
     </body>
 </html>
