--- a/html/spotify.html
+++ b/html/spotify.html
@@ -7,7 +7,7 @@
     <head>
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <title>APIs</title>
+        <title>Spotify API</title>
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="stylesheet" href="/css/main.css">
@@ -19,12 +19,16 @@
 
         </nav>
         
-        <h1 class="phead">APIs</h1>
+        <h1 class="phead">Spotify</h1>
+        <p class="h3">Top 20</p>
+        <br />
+        <p class="h3">Up-to-date as of December 2020</p>
 
-        <a href="html/countries.html">Countries</a>
-        <a href="html/games.html">Games</a>
-        <a href="html/spotify.html">Spotify</a>
+        <div id="container">
+
+        </div>
 
         
+        <script src="/js/spotify.js" type="module"></script>
     </body>
 </html>
